objects/OrderMilestonesUpdateRules__mdt/OrderMilestonesUpdateRules__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is used to capture business rules for mapping on order manufacturing statuses.</description>
    <label>Order Milestones Update Rules</label>
    <pluralLabel>Order Milestones Update Rules</pluralLabel>
</CustomObject>