objects/OrderMilestonesUpdateRules__mdt/fields/CryoType__c.field-meta.xml
<CustomField>
    <fullName>CryoType__c</fullName>
    <description>Cryo type of the Order Milestone for which the rule applies</description>
    <label>CryoType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>