objects/OrderMilestonesUpdateRules__mdt/fields/MilestoneName__c.field-meta.xml
<CustomField>
    <fullName>MilestoneName__c</fullName>
    <description>Name of the Order Milestone for which the rule applies</description>
    <label>Milestone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>