objects/OrderMilestonesUpdateRules__mdt/fields/MilestoneSource__c.field-meta.xml
<CustomField>
    <fullName>MilestoneSource__c</fullName>
    <description>This field describes the Milestone Source for the Order Milestone</description>
    <label>Milestone Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>