objects/OrderMilestonesUpdateRules__mdt/fields/MilestoneType__c.field-meta.xml
<CustomField>
    <fullName>MilestoneType__c</fullName>
    <description>Type of the Order Milestone for which the rule applies</description>
    <label>Milestone Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>