objects/OrderMilestonesUpdateRules__mdt/fields/OrderMilestoneStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderMilestoneStatus__c</fullName>
    <description>Manufacturing status of the Order Milestone.</description>
    <label>Order Milestone Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>