objects/OrderMilestonesUpdateRules__mdt/fields/SourceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SourceFieldAPIName__c</fullName>
    <description>API Name of the source field on the Order for the update related to the rule</description>
    <label>Source Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>