objects/OrderMilestonesUpdateRules__mdt/fields/TargetFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>TargetFieldAPIName__c</fullName>
    <description>API Name of the target field on the Order for the update related to the rule</description>
    <label>Target Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>