objects/OrderMilestonesUpdateRules__mdt/fields/TargetStatusAPIName__c.field-meta.xml
<CustomField>
    <fullName>TargetStatusAPIName__c</fullName>
    <description>API Name of the target Status fields on the Order for the update related to the rule.</description>
    <label>Target Status API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>