objects/OrderMilestonesUpdateRules__mdt/listViews/AllOrderMilestonesUpdateRules.listView-meta.xml
<ListView>
    <fullName>AllOrderMilestonesUpdateRules</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>MilestoneName__c</columns>
    <columns>MilestoneSource__c</columns>
    <columns>MilestoneType__c</columns>
    <columns>OrderMilestoneStatus__c</columns>
    <columns>SourceFieldAPIName__c</columns>
    <columns>TargetFieldAPIName__c</columns>
    <columns>TargetStatusAPIName__c</columns>
    <columns>CryoType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Order Milestones Update Rules</label>
    <language>en_US</language>
</ListView>